Fix navbar overlaping

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,7 +6,6 @@
 
 .moving-left {
   width: 100%;
-  height: 100px;
 }
 
 .nav-wrapper .input-field input[type='search'] {
@@ -48,4 +47,25 @@
 
 .card-info > p {
   margin-top: 0;
+}
+
+.card-info > h5 {
+  font-weight: bold;
+}
+
+.buttons-container {
+  padding-bottom: 1.5rem;
+}
+
+.card-fixed:first-child {
+  margin: 3.375rem 0 1rem 0 !important;
+  background: blue;
+}
+
+.row {
+  margin-bottom: 0 !important;
+}
+
+.card {
+  margin-top: 2rem !important;
 }
